; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/mail/extr_names.c_nalloc.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/mail/extr_names.c_nalloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.name = type { i32, i32, i32*, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.name* @nalloc(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.name*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = call i64 @salloc(i32 24)
  %7 = inttoptr i64 %6 to %struct.name*
  store %struct.name* %7, %struct.name** %5, align 8
  %8 = load %struct.name*, %struct.name** %5, align 8
  %9 = getelementptr inbounds %struct.name, %struct.name* %8, i32 0, i32 3
  store i32* null, i32** %9, align 8
  %10 = load %struct.name*, %struct.name** %5, align 8
  %11 = getelementptr inbounds %struct.name, %struct.name* %10, i32 0, i32 2
  store i32* null, i32** %11, align 8
  %12 = load i32, i32* %4, align 4
  %13 = load %struct.name*, %struct.name** %5, align 8
  %14 = getelementptr inbounds %struct.name, %struct.name* %13, i32 0, i32 0
  store i32 %12, i32* %14, align 8
  %15 = load i8*, i8** %3, align 8
  %16 = call i32 @savestr(i8* %15)
  %17 = load %struct.name*, %struct.name** %5, align 8
  %18 = getelementptr inbounds %struct.name, %struct.name* %17, i32 0, i32 1
  store i32 %16, i32* %18, align 4
  %19 = load %struct.name*, %struct.name** %5, align 8
  ret %struct.name* %19
}

declare dso_local i64 @salloc(i32) #1

declare dso_local i32 @savestr(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
